--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,13 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "beartype>=0.18.5",
     "docutils>=0.19",
     "sphinx>=7.3.5",
 ]
 optional-dependencies.dev = [
     "actionlint-py==1.7.4.20",
+    "beartype==0.19.0",
+    "beautifulsoup4==4.12.3",
     "check-manifest==0.50",
     "deptry==0.21.2",
     "doc8==1.1.2",
@@ -342,7 +343,7 @@ ignore_names = [
     "pytest_plugins",
     # pytest fixtures - we name fixtures like this for this purpose
     "fixture_*",
-    # Sphinx
+    # Sphinx configuration
     "autoclass_content",
     "autoclass_content",
     "autodoc_member_order",
@@ -371,6 +372,14 @@ ignore_names = [
     "spelling_word_list_filename",
     "templates_path",
     "warning_is_error",
+    # Sphinx variables
+    "has_content",
+    "required_arguments",
+    "optional_arguments",
+    "final_argument_whitespace",
+    "option_spec",
+    "run",
+
 ]
 
 # Duplicate some of .gitignore
