--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ optional-dependencies.dev = [
     "shfmt-py==3.7.0.1",
     # We use `sphinx.testing`.
     "sphinx[test]==8.1.3",
+    "types-beautifulsoup4==4.12.0.20241020",
     "types-docutils==0.21.0.20241128",
     "vulture==2.14",
     "yamlfix==1.17.0",
