--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ optional-dependencies.dev = [
     # We use `sphinx.testing`.
     "sphinx[test]==8.2.0",
     "sphinx-lint==1.0.0",
+    "sphinx-pyproject==0.3.0",
     "types-docutils==0.21.0.20241128",
     "vulture==2.14",
     "yamlfix==1.17.0",
