--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ optional-dependencies.dev = [
     "pyenchant==3.3.0",
     "pylint==4.0.4",
     "pyproject-fmt==2.11.1",
+    "pyrefly==0.46.1",
     "pyright==1.1.407",
     "pyroma==5.0.1",
     "pytest==9.0.2",
