--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,7 @@ ci:
     - vulture
     - vulture-docs
     - yamlfix
+    - zizmor
 
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
@@ -288,6 +289,14 @@ repos:
         name: yamlfix
         entry: uv run --extra=dev yamlfix
         language: python
+        types_or: [yaml]
+        additional_dependencies: [uv==0.9.5]
+
+      - id: zizmor
+        name: zizmor
+        entry: uv run --extra=dev zizmor .github
+        language: python
+        pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
 
