--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ optional-dependencies.dev = [
     "mypy[faster-cache]==1.19.1",
     "mypy-strict-kwargs==2025.4.3",
     "myst-parser==4.0.1",
-    "pre-commit==4.5.1",
+    "prek==0.2.25",
     "pyenchant==3.3.0",
     "pylint==4.0.4",
     "pyproject-fmt==2.11.1",
