Remove hook types which are not used

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,36 +38,56 @@ ci:
 
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-default_install_hook_types: [pre-commit, pre-push]
+
+# This should match the hook stages run in the lint configuration.
+default_install_hook_types: [pre-commit]
 
 repos:
   - repo: meta
     hooks:
       - id: check-useless-excludes
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
       - id: check-added-large-files
+        stages: [pre-commit]
       - id: check-case-conflict
+        stages: [pre-commit]
       - id: check-executables-have-shebangs
+        stages: [pre-commit]
       - id: check-merge-conflict
+        stages: [pre-commit]
       - id: check-shebang-scripts-are-executable
+        stages: [pre-commit]
       - id: check-symlinks
+        stages: [pre-commit]
       - id: check-json
+        stages: [pre-commit]
       - id: check-toml
+        stages: [pre-commit]
       - id: check-vcs-permalinks
+        stages: [pre-commit]
       - id: check-yaml
+        stages: [pre-commit]
       - id: end-of-file-fixer
+        stages: [pre-commit]
       - id: file-contents-sorter
         files: spelling_private_dict\.txt$
+        stages: [pre-commit]
       - id: trailing-whitespace
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
       - id: rst-directive-colons
+        stages: [pre-commit]
       - id: rst-inline-touching-normal
+        stages: [pre-commit]
       - id: text-unicode-replacement-char
+        stages: [pre-commit]
       - id: rst-backticks
+        stages: [pre-commit]
 
   - repo: local
     hooks:
@@ -78,6 +98,7 @@ repos:
         pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: docformatter
         name: docformatter
@@ -85,6 +106,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: shellcheck
         name: shellcheck
@@ -92,14 +114,17 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: shellcheck-docs
         name: shellcheck-docs
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=shell
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=shell
           --language=console --command="shellcheck --shell=bash"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: shfmt
         name: shfmt
@@ -107,60 +132,64 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: shfmt-docs
         name: shfmt-docs
-        entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
+        entry:
+          uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
           --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: mypy
         name: mypy
-        stages: [pre-push]
         entry: uv run --extra=dev -m mypy
         language: python
         types_or: [python, toml]
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: mypy-docs
         name: mypy-docs
-        stages: [pre-push]
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="mypy"
         language: python
         types_or: [markdown, rst]
+        stages: [pre-commit]
 
       - id: check-manifest
         name: check-manifest
-        stages: [pre-push]
         entry: uv run --extra=dev -m check_manifest
         language: python
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: pyright
         name: pyright
-        stages: [pre-push]
         entry: uv run --extra=dev -m pyright .
         language: python
         types_or: [python, toml]
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: pyright-docs
         name: pyright-docs
-        stages: [pre-push]
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="pyright"
         language: python
         types_or: [markdown, rst]
+        stages: [pre-commit]
 
       - id: pyright-verifytypes
         name: pyright-verifytypes
-        stages: [pre-push]
         # Use `--ignoreexternal` because we expose parts of the Sphinx API and Sphinx is not
         # thoroughly typed enough.
         entry: uv run --extra=dev -m pyright --ignoreexternal --verifytypes sphinx_combine
@@ -168,24 +197,26 @@ repos:
         pass_filenames: false
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ty
         name: ty
-        stages: [pre-push]
         entry: uv run --extra=dev ty check
         language: python
         types_or: [python, toml]
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ty-docs
         name: ty-docs
-        stages: [pre-push]
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="ty check"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: vulture
         name: vulture
@@ -194,14 +225,17 @@ repos:
         types_or: [python]
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: vulture-docs
         name: vulture docs
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="vulture"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: pyroma
         name: pyroma
@@ -210,6 +244,7 @@ repos:
         pass_filenames: false
         types_or: [toml]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: deptry
         name: deptry
@@ -217,14 +252,15 @@ repos:
         language: python
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: pylint
         name: pylint
         entry: uv run --extra=dev -m pylint src/ tests/
         language: python
-        stages: [manual]
         pass_filenames: false
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ruff-check-fix
         name: Ruff check fix
@@ -232,6 +268,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
@@ -239,6 +276,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ruff-format-fix
         name: Ruff format
@@ -246,14 +284,17 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
-        entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
+        entry:
+          uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
           format"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: doc8
         name: doc8
@@ -261,6 +302,7 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: interrogate
         name: interrogate
@@ -268,14 +310,17 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: interrogate-docs
         name: interrogate docs
-        entry: uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
+        entry:
+          uv run --extra=dev doccmd --no-write-to-file --example-workers 0 --language=python
           --command="interrogate"
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -284,6 +329,7 @@ repos:
         types_or: [toml]
         files: pyproject.toml
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: yamlfix
         name: yamlfix
@@ -291,6 +337,7 @@ repos:
         language: python
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: zizmor
         name: zizmor
@@ -299,6 +346,7 @@ repos:
         pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
 
       - id: sphinx-lint
         name: sphinx-lint
@@ -306,3 +354,4 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.9.5]
+        stages: [pre-commit]
