Replace docformatter with pydocstringformatter
- Replace docformatter==1.7.7 with pydocstringformatter==0.7.3
- Replace [tool.docformatter] with [tool.pydocstringformatter] config
- Update ruff ignore comments (D200 -> D205/D212)
- Don't use linewrap-full-docstring to avoid breaking URLs
  (https://github.com/DanielNoord/pydocstringformatter/issues/540)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ ci:
     - check-manifest
     - deptry
     - doc8
-    - docformatter
+    - pydocstringformatter
     - interrogate
     - interrogate-docs
     - mypy
@@ -81,9 +81,9 @@ repos:
         types_or: [yaml]
         additional_dependencies: [uv==0.9.5]
 
-      - id: docformatter
-        name: docformatter
-        entry: uv run --extra=dev -m docformatter --in-place
+      - id: pydocstringformatter
+        name: pydocstringformatter
+        entry: uv run --extra=dev pydocstringformatter
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.9.5]
