Enable coverage report.show_missing (#335)
* Enable coverage report.show_missing

* [pre-commit.ci lite] apply automatic fixes

---------

Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -269,6 +269,7 @@ run.branch = true
 report.exclude_also = [
     "if TYPE_CHECKING:",
 ]
+report.show_missing = true
 
 [tool.mypy]
 strict = true
